--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body style="background-color: rgb(199, 178, 146);">
-    <script src="form.js"></script>
+    <script src="index.js"></script>
     <!--<script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>-->
 </body>
 </html>
